...
            } label: {
              Label(
                String(localized: "article_readingSettings"),
                systemImage: "textformat.size"
              )
            }
            .accessibilityIdentifier("article.readingSettings")

            if let urlString = viewModel.articleData?.url,
              let url = URL(string: urlString)
            {
              if let title = viewModel.articleData?.title {
                ShareLink(item: url, subject: Text(title)) {
...
            } label: {
              Label(String(localized: "article_delete"), systemImage: "trash")
            }
          } label: {
            Label("More", systemImage: "ellipsis.circle")
          }
          .accessibilityIdentifier("article.moreActions")
        }
      }
      .toolbar {
        ToolbarItemGroup(placement: .bottomBar) {
          SyncIndicatorView()
          Spacer()
...
