...
  }

  Widget _buildMenu(
    BuildContext context,
    ListingContainerController controller,
  ) => Semantics(
    identifier: 'listing.menu',
    child: PopupMenuButton<MenuAction>(
      itemBuilder: (context) => [
        PopupMenuItem(
          value: MenuAction.saveLink,
          child: ListTile(
            leading: const Icon(Icons.add_link),
...
            title: Text(context.L.g_synchronize),
          ),
        ),
        PopupMenuItem(
          value: MenuAction.settings,
          child: Semantics(
            identifier: 'listing.settings',
            child: ListTile(
              leading: const Icon(Icons.settings),
              title: Text(context.L.g_settings),
            ),
          ),
        ),
...
