...
        ToolbarItem(placement: .topBarLeading) {
          Button {
            dismiss()
          } label: {
            Image(systemName: "xmark")
          }
          .accessibilityIdentifier("back")
        }
      }
      .alert(
        String(localized: "settings_itemClearCache"),
        isPresented: $showClearCacheConfirm
      ) {
...
